--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^3.2.0",
+    "react-app-polyfill": "^1.0.5",
     "react-router-dom": "^5.1.2",
     "styled-components": "^4.4.1",
     "styled-reset": "^4.0.9",
