--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "html-webpack-plugin": "^3.2.0",
     "react-app-polyfill": "^1.0.5",
     "react-router-dom": "^5.1.2",
+    "scriptjs": "^2.5.9",
     "styled-components": "^4.4.1",
     "styled-reset": "^4.0.9",
     "typescript": "^3.7.4",
